# monoid-average

./: LICENSE  README.md  monoid-average.cabal
app/: Main.hs
src/: MonoidAverage.hs
test/: Spec.hs
