name:                monoid-average
version:             0.1.0.0
synopsis:            Monoid Average
description:         Please see README.md
homepage:            http://github.com/dlgd/monoid-average#readme
license:             BSD3
license-file:        LICENSE
author:              Daniel Gazard
maintainer:          daniel.gazard@gmail.com
copyright:           2015 Daniel Gazard
category:            Data
build-type:          Simple
extra-source-files:
                   README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     MonoidAverage
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable monoid-average-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , monoid-average
  default-language:    Haskell2010

test-suite monoid-average-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , monoid-average
                     , tasty
                     , tasty-quickcheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dlgd/monoid-average
